--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h1>David Podhola</h1>
-<p>I am a F# developer.</p>
-
+<p>I am a F# developer. I also know about sales and marketing.</p>
+<p>Check my resume.</p>
 </body>
 </html>
