--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <body>
 <h1>David Podhola</h1>
 <p>I am a F# developer. I also know about sales and marketing.</p>
-<p>Check my resume.</p>
+<p>Check <a href="http://1drv.ms/1PkMC0r">my resume</a>.</p>
 </body>
 </html>
