--- a/index.html
+++ b/index.html
@@ -3,5 +3,17 @@
 <h1>David Podhola</h1>
 <p>I am a F# developer. I also know about sales and marketing.</p>
 <p>Check <a href="http://1drv.ms/1PkMC0r">my resume</a>.</p>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-3353225-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
