Update generated web site (08 února 2016)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 
 <h1>David Podhola</h1>
 
-<p>I love to code and develop application. Have been doing it in BASIC and Pascal since 1986 for fun, professionally since 1994.</p>
+<p>I love to code, develop, market and sell applications. Have been doing it in BASIC and Pascal since 1986 for fun, professionally since 1994.</p>
+
+<p>
+I understand <strong>both technical and business aspects</strong> of software development. I am happy to talk to <strong>potential customers</strong>. I am able to deliver production code.
+</p>
 
 <p>
 I strongly believe in:
@@ -63,7 +67,7 @@ I strongly believe in:
     <li>using native application (e.g. on mobile phones) and synchronizing them if needed</li>
 </ul>	
 </p>
-<p>The best applications are those that are silently helping the users to do their work unnoticed.</p>
+<p></p>
 
       </section>
       <footer>
