--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul>
           <li><a target="_blank" href="https://careers.stackoverflow.com/davidpodhola"><strong>SO</strong> careers</a></li>
           <li><a target="_blank" href="https://www.linkedin.com/in/davidpodhola"><strong>LinkedIn</strong> profile</a></li>
-          <li><a target="_blank" href="https://www.upwork.com/o/profiles/users/_~01c6ddb46a82164299/"><strong>UpWork</strong> freelancer</a></li>
+          <li><a target="_blank" href="https://github.com/davidpodhola/"><strong>GitHub</strong> OSS Dev</a></li>
         </ul>
         <h2>Recent posts</h2>
       </header>
