--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   	<div class="wrapper">
 	  <header>
 	  	  <p><a href="http://david.podhola.net//index.html" class="falseheader">David Podhola</a></p>
-        <p>.NET (F# and C#) <strong>developer with sales and marketing skills</strong>. Now with Node.js too.<br/>
+        <p>C#/F#/JavaScript Developer on Microsoft Technologies (SharePoint, Dynamics, Azure).<br/>
 	    I love to design, develop, market and sell applications. Have been doing it in BASIC and Pascal since 1986 for fun, professionally since 1994.</p>
 
         <p class="view">
