--- a/index.html
+++ b/index.html
@@ -28,22 +28,17 @@
   	<div class="wrapper">
 	  <header>
 	  	  <p><a href="http://david.podhola.net//index.html" class="falseheader">David Podhola</a></p>
-        <p>C#/F#/JavaScript Developer on Microsoft Technologies (SharePoint, Dynamics, Azure).<br/>
+        <p>Software developer. Master's Degree in Computer Science. Rigorous and organized.<br/>
 	    I love to design, develop, market and sell applications. Have been doing it in BASIC and Pascal since 1986 for fun, professionally since 1994.</p>
 
         <p class="view">
-			<a target="_blank" href="http://1drv.ms/1PkMC0r">CV</a>&nbsp;|&nbsp;<a href="tel:+15594811141">+1 (559) 481-1141</a>
-			&nbsp;|&nbsp;			
 			<a target="_blank" href="http://www.google.com/recaptcha/mailhide/d?k=01n4iwS7PDVly2tScfUHUvaQ==&amp;c=oTRpUp6JLQlt8ghgnSxa7P8TJADZk6XtqobNlgPnD5M=" onclick="window.open(http://www.google.com/recaptcha/mailhide/d?k\07501n4iwS7PDVly2tScfUHUvaQ\75\75\46c\75oTRpUp6JLQlt8ghgnSxa7P8TJADZk6XtqobNlgPnD5M\075', '_blank', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">Email</a>
-			&nbsp;|&nbsp;			
-			<a target="_blank" href="https://twitter.com/FakeCRM">&#64;FakeCRM</a>
 		</p>
         <ul>
           <li><a target="_blank" href="https://careers.stackoverflow.com/davidpodhola"><strong>SO</strong> careers</a></li>
           <li><a target="_blank" href="https://www.linkedin.com/in/davidpodhola"><strong>LinkedIn</strong> profile</a></li>
           <li><a target="_blank" href="https://github.com/davidpodhola/"><strong>GitHub</strong> OSS Dev</a></li>
         </ul>
-        <h2>Recent posts</h2>
       </header>
       <section>
 		    
